fix: use `scrollbar-gutter: stable`

--- a/src/picker/styles/picker.scss
+++ b/src/picker/styles/picker.scss
@@ -1,4 +1,5 @@
 @import './global';
+@import './mixins';
 
 // These z-indexes are used to manage the skintone picker animation and make it look nicer.
 // The skintone picker should appear to expand "behind" the skintone button.
@@ -54,7 +55,7 @@ $skintoneZIndex3: 3;
 // tab panel
 
 .tabpanel {
-  overflow-y: auto;
+  @include scrollbar-gutter-stable; // avoid emojis shifting during search, when scrollbar may disappear
   -webkit-overflow-scrolling: touch; // fix iOS scrolling
   will-change: transform; // fix "repaints on scroll" warning in Chrome https://crbug.com/514303
   min-height: 0;
@@ -200,6 +201,7 @@ input.search {
 // favorites
 
 .favorites {
+  @include scrollbar-gutter-stable; // line up favorites with the tabpanel
   display: flex;
   flex-direction: row;
   border-top: var(--border-size) solid var(--border-color);
